--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.wrapper {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  flex-direction: column;
+}
